--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/* BEGIN MEYER RESET */
+
+/* http://meyerweb.com/eric/tools/css/reset/ | v2.0 | 20110126 | License: none (public domain) */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -45,4 +44,125 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+/* END MEYER RESET */
+
+* {
+	outline: solid 1px black;
+}
+
+body {
+	font-family: sans-serif;
+}
+
+.dashboard-wrapper {
+	display: grid;
+	grid-template: 1fr 5fr / 1fr 5fr;
+}
+
+.sidebar {
+	display: grid;
+	grid-template: 1fr 3fr 3fr / 1fr;
+	grid-row: 1/3;
+}
+
+.sidebar-header {
+	display: grid;
+	grid-template: 1fr / 1fr 3fr;
+	align-items: center;
+}
+
+.sidebar-navigation {
+	display: grid;
+}
+
+.sidebar-navigation-item {
+	display: grid;
+	grid-template: 1fr/ 1fr 3fr;
+}
+
+.sidebar-links {
+	display: grid;
+}
+
+.sidebar-link-item {
+	display: grid;
+	grid-template: 1fr / 1fr 3fr;
+}
+
+.card-content {
+	display: grid;
+	grid-template: auto auto auto / 3fr 1fr;
+}
+
+.card-text {
+	grid-row: 2/3;
+	grid-column: 1/3;
+	text-align: justify;
+	padding: 5px;
+}
+
+.card-side {
+	background: linear-gradient(180deg, #3f87a6, #ebf8e1, #f69d3c);
+	height: 100%;
+	width: 10px;
+	grid-row: 1 / span auto;
+}
+
+.card-icons {
+	display: grid;
+	grid-template: 1fr / 1fr 1fr 1fr;
+	grid-row: 3/4;
+	grid-column: 2/3;
+}
+
+.dashboard-card-wrapper {
+	display: grid;
+	grid-template: 1fr / 4fr 1fr;
+	grid-column: 2 / 3;
+	grid-row: 2 / 3;
+}
+
+.project-card {
+	display: grid;
+	grid-template: 1fr/ auto 1fr;
+}
+
+.project-cards {
+	display: grid;
+	grid-template: 1fr 1fr 1fr / 1fr 1fr;
+	gap: 15px;
+	margin: 15px;
+}
+
+.project-card-title {
+	grid-column: 1/3;
+	padding-left: 5px;
+}
+
+.bulletin-cards {
+	display: grid;
+	gap: 15px;
+	padding: 15px 5px;
+}
+
+.bulletin-card {
+	display: grid;
+	grid-template: auto 1fr 1fr 1fr / 1fr;
+}
+
+.trending-user {
+	display: grid;
+	grid-template: auto / 1fr 2fr;
+}
+
+.menu {
+	display: grid;
+	grid-template: 1fr 1fr / 3fr 2fr;
+}
+
+.menu-links {
+	display: grid;
+	grid-template: 1fr / 1fr 1fr 1fr;
 }
