--- a/styles.css
+++ b/styles.css
@@ -48,23 +48,39 @@ table {
 
 /* END MEYER RESET */
 
+:root {
+	--color-1: #9674FC;
+	--color-2: #8768E3;
+	--color-3: #7057BD;
+	--color-4: #4A397D;
+	--color-5: #241C3D;
+	--text-color: #FFF9E6;
+}
+
 * {
-	outline: solid 1px black;
+	outline: solid 1px rgba(0, 0, 0, 0.1);	
 }
 
 body {
 	font-family: sans-serif;
+	color: var(--text-color);
 }
 
 .dashboard-wrapper {
 	display: grid;
 	grid-template: 1fr 5fr / 1fr 5fr;
+	background-color: var(--color-5);
+	gap: 5px;
 }
 
 .sidebar {
 	display: grid;
 	grid-template: 1fr 3fr 3fr / 1fr;
 	grid-row: 1/3;
+	padding-left: 5px;
+	background-color: var(--color-3);
+	border-radius: 10px;
+	margin: 5px 0px 5px 5px;
 }
 
 .sidebar-header {
@@ -74,6 +90,7 @@ body {
 }
 
 .sidebar-navigation {
+	margin-top: 50px;
 	display: grid;
 }
 
@@ -83,7 +100,7 @@ body {
 }
 
 .sidebar-links {
-	display: grid;
+	margin-top: 50px;
 }
 
 .sidebar-link-item {
@@ -93,7 +110,8 @@ body {
 
 .card-content {
 	display: grid;
-	grid-template: auto auto auto / 3fr 1fr;
+	grid-template: auto 1fr auto / 3fr 1fr;
+	border-radius: 0px 10px 10px 0px;
 }
 
 .card-text {
@@ -104,10 +122,11 @@ body {
 }
 
 .card-side {
-	background: linear-gradient(180deg, #3f87a6, #ebf8e1, #f69d3c);
 	height: 100%;
 	width: 10px;
 	grid-row: 1 / span auto;
+	background: linear-gradient(180deg, var(--color-5), var(--color-4));
+	border-radius: 10px 0px 0px 10px;
 }
 
 .card-icons {
@@ -122,16 +141,23 @@ body {
 	grid-template: 1fr / 4fr 1fr;
 	grid-column: 2 / 3;
 	grid-row: 2 / 3;
+	border-radius: 10px;
+	background-color: var(--color-4);
+	margin: 0px 5px 5px 0px;
 }
 
 .project-card {
 	display: grid;
 	grid-template: 1fr/ auto 1fr;
+	border-radius: 10px;
+	outline: solid 2px var(--color-5);
+	box-shadow: 2px 2px 5px 1px black;
+	background-color: var(--color-3);
 }
 
 .project-cards {
 	display: grid;
-	grid-template: 1fr 1fr 1fr / 1fr 1fr;
+	grid-template: auto 1fr 1fr 1fr / 1fr 1fr;
 	gap: 15px;
 	margin: 15px;
 }
@@ -139,6 +165,9 @@ body {
 .project-card-title {
 	grid-column: 1/3;
 	padding-left: 5px;
+	padding-top: 2px;
+	font-weight: bold;
+	font-size: 1.2rem;
 }
 
 .bulletin-cards {
@@ -150,6 +179,9 @@ body {
 .bulletin-card {
 	display: grid;
 	grid-template: auto 1fr 1fr 1fr / 1fr;
+	border-radius: 10px;
+	background-color: var(--color-3);
+	outline: solid 2px var(--color-5);
 }
 
 .trending-user {
@@ -159,10 +191,118 @@ body {
 
 .menu {
 	display: grid;
-	grid-template: 1fr 1fr / 3fr 2fr;
+	grid-template: 1fr 2fr / 3fr 2fr;
+	padding-top: 5px;
+	padding-right: 5px;
+	background-color: var(--color-2);
+	border-radius: 10px;
+	margin: 5px 5px 0px 0px;
 }
 
 .menu-links {
 	display: grid;
 	grid-template: 1fr / 1fr 1fr 1fr;
+	justify-content: center;
+	align-items: center;
+}
+
+.search-bar {
+	display: grid;
+	grid-template: 1fr / 1fr 6fr;
+	justify-content: center;
+	align-items: center;
+}
+
+.bulletin-card-title, .announcement {
+	padding: 5px;
+}
+
+.bulletin-card-title {
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+.announcement, .trending-user-info, .card-text {
+	font-size: 0.9rem;
+}
+
+.trending-user-photo {
+	display: grid;
+	justify-content: center;
+	align-items: center;
+}
+
+.card-user-name {
+	font-weight: bold;
+	font-size: 1rem;
+	line-height: 1.5rem;
+}
+
+.user {
+	display: grid;
+	grid-template: 1fr / 1fr 6fr;
+	justify-content: center;
+	align-items: center;
+}
+
+.user-profile-pic {
+	width: 80px;
+	margin-right: 10px;
+	border-radius: 50%;
+	justify-self: right;
+}
+
+.notification-user-pic {
+	width: 50px;
+	border-radius: 50%;
+	justify-self: right;
+	margin-right: 10px;
+}
+
+.notification-tray {
+	display: grid;
+	grid-template: 1fr/ 1fr 1fr auto;
+	font-weight: bold;
+	font-size: 1.2rem;
+	text-align: center;
+	align-items: center;
+}
+
+.project-header {
+	grid-column: 1/3;
+	font-weight: bold;
+	font-size: 1.75rem;
+}
+
+.link-button {
+	border-radius: 20px;
+	height: 40px;
+	font-size: 1.2rem;
+	font-weight: bold;
+	border: 0;
+	margin: 5px;	
+	outline: 3px solid var(--color-5);
+}
+
+.link-button:hover {
+	cursor: pointer;
+}
+
+.link-button:active{
+	transform: scale(0.95);
+	transition-duration: 50ms;
+}
+
+input {
+	height: 1.2rem;
+	font-weight: bold;
+	width: 80%;
+	margin: 5px;
+	border-radius: 10px;
+	padding: 0px 5px;
+}
+
+.header-user-name {
+	font-weight: bold;
+	font-size: 1.5rem;
 }
